# src/LupiraMtgApi/Models/Health/HealthResponse.cs
@@ -1,6 +1,0 @@
-namespace LupiraMtgApi.Models.Health;
-
-public sealed class HealthResponse
-{
-    public required string Status { get; set; }
-}
